--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -11,7 +11,7 @@
 	    <button class="btn" ng-click="onSearch()" ng-show="hasButton('search')"><i class="icon icon-search"></i> <span x-translate>Search</span></button>
 	  </div>
 	  <div class="btn-group" ng-show="toolbar">
-	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
+	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn" name="{{btn.name}}">{{btn.title}}</button>
 	  </div>
 	  <div class="record-pager pull-right">
 	    <span>{{pagerText()}}</span>
