--- a/axelor-wkf/src/main/resources/views/Workflow.xml
+++ b/axelor-wkf/src/main/resources/views/Workflow.xml
@@ -9,14 +9,10 @@
 		<option value="start">Start</option>
 		<option value="intermediary">Intermediary</option>
 		<option value="stop">Stop</option>
+		<option value="gateway">Gateway</option>
 	</selection>
     
-    <selection name="end.node.logic.operator.selection">
-		<option value="or">OR</option>
-		<option value="xor">XOR</option>
-	</selection>
-    
-    <selection name="start.node.logic.operator.selection">
+    <selection name="node.logic.operator.selection">
 		<option value="and">AND</option>
 		<option value="or">OR</option>
 		<option value="xor">XOR</option>
@@ -36,8 +32,10 @@
         <field name="metaModel"/>
         <field name="maxNodeCounter"/>
         <field name="node" form-view="start-node-form"/>
+        <separator title="Description" colSpan="4"/>
+        <field name="description" colSpan="4" noLabel="true"/>
         <separator colSpan="4"/>
-        <group colSpan="4" cols="6">
+        <group colSpan="4" cols="6" colWidths="33,33%*">
 	        <button name="run" title="Run" onClick="save,wkf-method-run" colSpan="2"/>
 	        <button name="openInstances" title="Show instances" onClick="save,wkf-method-open-instances" colSpan="2"/>
 	        <button name="showOryx" title="Oryx" onClick="save,wkf-method-show-editor" colSpan="2"/>
@@ -54,18 +52,20 @@
     <form name="node-form" title="Node" cols="4" model="com.axelor.wkf.db.Node"
     onLoad="node-type-attrs"
     onNew="node-default-record,node-type-attrs">
-        <field name="name"/>
     	<field name="workflow"/>
         <field name="type" onChange="node-type-attrs" required="true"/>
-        <field name="action"/>
+        <field name="name"/>
+        <field name="action" />
+        <field name="logicOperator" />
+        <break/>
         <group name="startGroup" colSpan="2" cols="2">
-	        <field name="startLogicOperator" />
 	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form"/>
         </group>
         <group name="endGroup" colSpan="2" cols="2">
-	        <field name="endLogicOperator" />
 	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form"/>
         </group>
+        <separator title="Description" colSpan="4"/>
+        <field name="description" colSpan="4" noLabel="true"/>
     </form>
     
     <form name="start-node-form" title="Node" cols="6" model="com.axelor.wkf.db.Node" onNew="node-start-default-record">
@@ -74,9 +74,10 @@
         <field name="action"/>
         <field name="type" hidden="true"/>
         <group name="endGroup" colSpan="6" cols="2">
-	        <field name="endLogicOperator" />
 	        <field name="endTransitions" colSpan="6" grid-view="end-transition-grid" form-view="end-transition-form"/>
         </group>
+        <separator title="Description" colSpan="6"/>
+        <field name="description" colSpan="6" noLabel="true"/>
     </form>
     
     <grid name="transition-grid" title="Transitions" model="com.axelor.wkf.db.Transition">
@@ -93,6 +94,8 @@
         <field name="startNode" summary-view="node-form" form-view="node-form" edit-window="self"/>
         <field name="nextNode" summary-view="node-form" form-view="node-form" edit-window="self" domain="self.type != 'start'"/>
         <field name="condition" colSpan="4"/>
+        <separator title="Description" colSpan="4"/>
+        <field name="description" colSpan="4" noLabel="true"/>
     </form>
     
     <grid name="start-transition-grid" title="Transitions" model="com.axelor.wkf.db.Transition">
@@ -107,6 +110,8 @@
         <field name="name"/>
         <field name="startNode" summary-view="node-form" form-view="node-form" edit-window="self"/>
         <field name="condition" colSpan="6"/>
+        <separator title="Description" colSpan="6"/>
+        <field name="description" colSpan="6" noLabel="true"/>
     </form>
     
     <grid name="end-transition-grid" title="Transitions" model="com.axelor.wkf.db.Transition">
@@ -121,6 +126,8 @@
         <field name="name"/>
         <field name="nextNode" summary-view="node-form" form-view="node-form" edit-window="self" domain="self.type != 'start'"/>
         <field name="condition" colSpan="6"/>
+        <separator title="Description" colSpan="6"/>
+        <field name="description" colSpan="6" noLabel="true"/>
     </form>
     
 <!-- ACTION -->
@@ -132,16 +139,20 @@
     <action-record name="node-start-default-record" model="com.axelor.wkf.db.Node">
     	<field name="type" expr="start"/>
     	<field name="workflow" expr="eval: _parent"/>
+    	<field name="name" expr="Start :"/>
     </action-record>
     
     <action-record name="node-default-record" model="com.axelor.wkf.db.Node">
     	<field name="workflow" expr="eval: _parent?.startNode?.workflow" if="_parent?.startNode"/>
     	<field name="workflow" expr="eval: _parent?._parent?.workflow" if="_parent?._parent"/>
+    	<field name="name" expr="eval: type.toUpperCase() + ':'"/>
     </action-record>
     
     <action-attrs name="node-type-attrs">
-    	<attribute name="hidden" for="startGroup" expr="eval: type == 'start'" />
-    	<attribute name="hidden" for="endGroup" expr="eval: type == 'stop'" />
+    	<attribute name="hidden" for="startGroup" expr="eval: type in ['start','gateway']" />
+    	<attribute name="hidden" for="endGroup" expr="eval: type in ['stop','gateway']" />
+    	<attribute name="hidden" for="logicOperator" expr="eval: type != 'gateway'" />
+    	<attribute name="hidden" for="action" expr="eval: type == 'gateway'" />
     </action-attrs>
     
     <action-method name="wkf-method-open-instances">
