--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -296,8 +296,8 @@ table.field-details .help-text hr {
 	margin: 9px 0;
 }
 
-.popover-inner {
-	width: inherit;
+.popover {
+	width: auto;
 	min-width: 280px;
 	max-width: 360px;
 }
