--- a/axelor-web/src/main/webapp/css/blue/theme.css
+++ b/axelor-web/src/main/webapp/css/blue/theme.css
@@ -2,37 +2,42 @@
  * Header
  *
  */
-header .navbar-inner {
+header .navbar-inverse .navbar-inner {
   background-image: -webkit-linear-gradient(bottom, #697586 0%, #515F71 100%);
   background-image: -moz-linear-gradient(bottom, #697586 0%, #515F71 100%);
   background-image: linear-gradient(bottom, #697586 0%, #515F71 100%);
   box-shadow: none;
 }
 
-header .navbar .nav > li > a {
-  color: whiteSmoke;
+header .navbar-inverse .nav > li > a {
+  color: #f5f5f5;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
-header .navbar .nav > li > a:hover {
+header .navbar-inverse .nav > li > a:hover {
   background-color: transparent;
   color: white;
   text-decoration: none;
 }
 
-header .navbar .divider-vertical {
+header .navbar-inverse .divider-vertical {
   background-color: #697586;
   border-right: 1px solid #515F71;
+  border-left: 1px solid #767F92;
 }
 
-header .navbar .nav li.dropdown .dropdown-toggle .caret,
-header .navbar .nav li.dropdown.open .caret {
+header .navbar-inverse .nav li.dropdown .dropdown-toggle .caret,
+header .navbar-inverse .nav li.dropdown.open .caret {
   border-top-color: white;
   border-bottom-color: white;
 }
 
-header .navbar .brand {
-	color: whiteSmoke;
+header .navbar-inverse .nav li.dropdown.open > .dropdown-toggle {
+	background-color: #767F92;
+}
+
+header .navbar-inverse .brand {
+	color: #f5f5f5;
 }
 
 /**
@@ -127,15 +132,21 @@ header .navbar .brand {
   border: 1px solid #6A798E;
 }
 
-.ui-dialog-titlebar {
+.stackbar .navbar .brand,
+.stackbar .navbar .nav > li > a {
+	text-shadow: none;
+}
+
+.ui-dialog .ui-dialog-titlebar {
   background-image: -webkit-linear-gradient(bottom, #74869d 0%, #29313a 50%, #4d5a66 100%);
   background-image: -moz-linear-gradient(bottom, #74869d 0%, #29313a 50%, #4d5a66 100%);
   background-image: linear-gradient(bottom, #74869d 0%, #29313a 50%, #4d5a66 100%);
   border-radius: 0;
 }
 
-.ui-dialog-titlebar *,
-.stackbar .navbar, .stackbar .navbar * {
+.ui-dialog .ui-dialog-titlebar *,
+.stackbar .navbar,
+.stackbar .navbar * {
   color: white;
 }
 
@@ -159,30 +170,13 @@ header .navbar .brand {
 
 .ui-dialog .ui-dialog-titlebar {
   padding: .2em 1em;
+  font-size: inherit;
+  line-height: 18px;
 }
 
 .ui-dialog .ui-dialog-titlebar-close {
-	
-}
-
-.ui-dialog .ui-dialog-titlebar-close.ui-state-hover {
-	border: 0;
-	background: transparent;
-}
-
-.ui-dialog .ui-dialog-titlebar-close span::before {
-	content: "\f00d";
-	font-family: FontAwesome;
-	font-weight: normal;
-	font-style: normal;
-	text-decoration: inherit;
-	display: inline-block;
-	width: 1.25em;
-	text-align: center;
-}
-
-.ui-dialog .ui-dialog-titlebar-close .ui-icon {
-	text-indent: 0px !important;
+  margin-top: -12px;
+  margin-right: 0px;
 }
 
 /**
