--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -79,3 +79,24 @@
 .slick-headerrow-column.ui-state-default {
 	padding: 0px;
 }
+
+.slick-cell.editable {
+	background: white;
+	border: 1px solid gray;
+}
+
+.slick-cell input,
+.slick-cell > [x-field] {
+	border: 0;
+	margin: 0 !important;
+	padding: 0 !important;
+	outline: 0;
+	border-radius: 0;
+	box-shadow: none;
+	width: 100%;
+	height: 100%;
+}
+
+.slick-cell .input-append > button {
+	display: none;
+}
