--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -131,6 +131,57 @@ table.form-layout td.form-item .input-append button {
 	padding: 2px 8px;
 }
 
+.picker-input {
+	display: inline-block;
+	box-sizing: border-box;
+}
+
+.picker-input input {
+	margin: 0;
+	width: 100%;
+}
+
+.picker-input input,
+.picker-icons-1 input {
+	padding-right: 24px;
+}
+
+.picker-icons-2 input {
+	padding-right: 40px;
+}
+
+.picker-icons-3 input {
+	padding-right: 56px;
+}
+
+.picker-icons-4 input {
+	padding-right: 72px;
+}
+
+.picker-input i[class^=icon] {
+	position: absolute;
+	top: 3px;
+	font-size: 14px;
+	cursor: pointer;
+}
+
+.picker-input i[class^=icon],
+.picker-input i[class^=icon].picker-icon-1 {
+	right: 8px;
+}
+
+.picker-input i[class^=icon].picker-icon-2 {
+	right: 24px;
+}
+
+.picker-input i[class^=icon].picker-icon-3 {
+	right: 40px;
+}
+
+.picker-input i[class^=icon].picker-icon-4 {
+	right: 56px;
+}
+
 table.form-layout .tabbable-tabs .nav-tabs {
 	margin-bottom: 0px;
 }
