--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -85,16 +85,17 @@
 
 .slick-cell.editable {
 	background: white;
-	border: 1px solid gray;
+	padding: 0;
+	height: 23px !important;
 }
 
 .slick-cell input,
 .slick-cell > [x-field] {
-	border: 0;
-	margin: 0 !important;
-	padding: 0 !important;
 	outline: 0;
+	margin: 0;
+	padding: 0;
 	border-radius: 0;
+	box-sizing: border-box;
 	box-shadow: none;
 	width: 100%;
 	height: 100%;
