Fixed size issue of inline editable o2m/m2m widgets.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -199,6 +199,10 @@ table.form-layout td.form-item .stackbar {
 	position: relative;
 }
 
+table.form-layout td.form-item .stackbar.inline-editable {
+	min-height: 200px;
+}
+
 .icons-bar {
 	display: inline-block;
 	padding-top: 4px;
