--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -284,6 +284,7 @@ html, body {
 	margin-top: 6px;
 	margin-left: 4px;
 	margin-right: 4px;
+	font-size: 13px;
 }
 
 .record-pager.pull-right > span,
