support for dirty cell highlight.

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -101,6 +101,12 @@
 	height: 100%;
 }
 
+.slick-cell.dirty {
+	background-image: url('../img/dirty.gif');
+	background-position: 0 0;
+	background-repeat: no-repeat;
+}
+
 .slick-cell .input-append > button {
 	display: none;
 }
