support of o2m/m2m widgets (editable grid).

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -136,52 +136,52 @@ table.form-layout td.form-item .input-append button {
 	box-sizing: border-box;
 }
 
-.picker-input input {
+.picker-input > input {
 	margin: 0;
 	width: 100%;
 }
 
-.picker-input input,
-.picker-icons-1 input {
+.picker-input > input,
+.picker-icons-1 > input {
 	padding-right: 24px;
 }
 
-.picker-icons-2 input {
+.picker-icons-2 > input {
 	padding-right: 40px;
 }
 
-.picker-icons-3 input {
+.picker-icons-3 > input {
 	padding-right: 56px;
 }
 
-.picker-icons-4 input {
+.picker-icons-4 > input {
 	padding-right: 72px;
 }
 
-.picker-input i[class^=icon] {
+.picker-input > i[class^=icon] {
 	position: absolute;
 	top: 3px;
 	cursor: pointer;
 }
 
-.picker-input i[class^=icon-caret] {
+.picker-input > i[class^=icon-caret] {
 	font-size: 12px;
 }
 
-.picker-input i[class^=icon],
-.picker-input i[class^=icon].picker-icon-1 {
+.picker-input > i[class^=icon],
+.picker-input > i[class^=icon].picker-icon-1 {
 	right: 8px;
 }
 
-.picker-input i[class^=icon].picker-icon-2 {
+.picker-input > i[class^=icon].picker-icon-2 {
 	right: 24px;
 }
 
-.picker-input i[class^=icon].picker-icon-3 {
+.picker-input > i[class^=icon].picker-icon-3 {
 	right: 40px;
 }
 
-.picker-input i[class^=icon].picker-icon-4 {
+.picker-input > i[class^=icon].picker-icon-4 {
 	right: 56px;
 }
 
