--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -100,6 +100,12 @@
 	box-shadow: none;
 	width: 100%;
 	height: 100%;
+	min-width: inherit !important;
+}
+
+.slick-editor-dropdown {
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+	min-width: 250px;
 }
 
 .slick-cell.dirty {
