--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -1,7 +1,7 @@
 <div class="grid-view" ng-controller="GridViewCtrl">
   <div class="record-toolbar btn-toolbar">
 	  <div class="btn-group">
-	    <button class="btn" ng-click="onNew()" ng-show="hasButton('new')"><i class="icon icon-file"></i> <span x-translate>New</span></button>
+	    <button class="btn" ng-click="onNew()" ng-show="hasButton('new')" ng-disabled="canSave()"><i class="icon icon-file"></i> <span x-translate>New</span></button>
 	    <button class="btn" ng-click="onSave()" ng-show="canEditInline()" ng-disabled="!canSave()"><i class="icon icon-save"></i> <span x-translate>Save</span></button>
 	    <button class="btn" ng-click="onEdit()" ng-show="hasButton('edit')" ng-disabled="!canEdit()"><i class="icon icon-pencil"></i> <span x-translate>Edit</span></button>
 	    <button class="btn" ng-click="onDelete()" ng-show="hasButton('delete')" ng-disabled="!canDelete()"><i class="icon icon-remove"></i> <span x-translate>Delete</span></button>
