--- a/axelor-web/src/main/webapp/partials/main.html
+++ b/axelor-web/src/main/webapp/partials/main.html
@@ -10,5 +10,6 @@
     <div class="view-tabs">
       <div nav-tabs ng-model="tabs"></div>
     </div> <!--/.view-tabs-->
+    <span ng-hide="true" ng-view></span> <!-- dummy views -->
   </div>
- </div>
+</div>
