Show update logs (#1061).

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -382,6 +382,10 @@ table.field-details th {
 	text-align: right;
 }
 
+table.field-details td {
+	padding-left: 4px;
+}
+
 table.field-details .help-text hr {
 	margin: 9px 0;
 }
