Fixed disabled notebook widget issues (#1107)

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -183,6 +183,7 @@ table.form-layout .tabbable-tabs .nav-tabs {
 }
 
 table.form-layout .tabbable-tabs .tab-content {
+	position: relative;
 	padding: 4px;
 	border: 1px solid #DDD;
 	border-top: 0;
