--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -10,7 +10,7 @@
 	    <button class="btn" ng-click="onRefresh()" ng-show="hasButton('refresh')"><i class="icon icon-refresh"></i> <span x-translate>Refresh</span></button>
 	    <button class="btn" ng-click="onSearch()" ng-show="hasButton('search')"><i class="icon icon-search"></i> <span x-translate>Search</span></button>
 	  </div>
-	  <div class="btn-group">
+	  <div class="btn-group" ng-show="hasAuditLog()">
 	  	<button class="btn" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
 	  </div>
 	  <div class="btn-group" ng-show="toolbar">
