--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -9,6 +9,7 @@
 	  <div class="btn-group">
 	    <button class="btn" ng-click="onRefresh()" ng-show="hasButton('refresh')"><i class="icon icon-refresh"></i> <span x-translate>Refresh</span></button>
 	    <button class="btn" ng-click="onSearch()" ng-show="hasButton('search')"><i class="icon icon-search"></i> <span x-translate>Search</span></button>
+	    <button class="btn" ng-click="onArchived($event)" ng-show="hasButton('archived')" data-toggle="button"><i class="icon icon-inbox"></i> <span x-translate>Archived</span></button>
 	  </div>
 	  <div class="btn-group" ng-show="toolbar">
 	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
