--- a/axelor-auth/src/main/resources/views/Group.xml
+++ b/axelor-auth/src/main/resources/views/Group.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<object-views xmlns="http://apps.axelor.com/xml/ns/object-views" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_1.0.xsd">
-    <grid name="group-grid" title="Groups">
-        <field name="name"/>
-        <field name="code"/>
-    </grid>
-    <form name="group-form" title="User" cols="2">
-        <field name="name"/>
-        <field name="code"/>
-    </form>
+<object-views xmlns="http://apps.axelor.com/xml/ns/object-views"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views
+  http://apps.axelor.com/xml/ns/object-views/object-views_0.8.xsd">
+
+  <grid name="group-grid" title="Groups">
+    <field name="name" />
+    <field name="code" />
+    <field name="restricted"/>
+  </grid>
+
+  <form name="group-form" title="User" cols="2">
+    <field name="name" />
+    <field name="code" />
+    <field name="restricted"/>
+    <field name="permissions" colSpan="2">
+      <grid title="Permissions">
+        <field name="name" />
+        <field name="objectName" />
+      </grid>
+    </field>
+  </form>
+
 </object-views>
