Refactored security implementation.
- single instance for table & row level rules
- added validation to check unique rule per group

--- a/axelor-auth/src/main/resources/views/Group.xml
+++ b/axelor-auth/src/main/resources/views/Group.xml
@@ -17,7 +17,7 @@
     <field name="permissions" colSpan="2">
       <grid title="Permissions">
         <field name="name" />
-        <field name="objectName" />
+        <field name="object" />
       </grid>
     </field>
   </form>
