--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -13,6 +13,9 @@
 	  <div class="btn-group" ng-show="hasAuditLog()">
 	  	<button class="btn" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
 	  </div>
+	  <div class="btn-group" ng-show="canShowAttachments()">
+	  	<button class="btn" ng-click="onShowAttachments()"><i class="icon icon-pushpin"></i></button>
+	  </div>
 	  <div class="btn-group" ng-show="toolbar">
 	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn" name="{{btn.name}}">{{btn.title}}</button>
 	  </div>
