--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -405,3 +405,16 @@ table.field-details .help-text hr {
 	max-width: 360px;
 	display: table;
 }
+
+.subtotal,
+.subtotal-total {
+	white-space: nowrap;
+	padding-right: 0px;
+	text-align: right;
+}
+
+.subtotal-total {
+	border-top: 1px solid #ccc;
+	font-size: 16px;
+	font-weight: bold;
+}
